messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app
  labels:
    app: django-messaging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging
  template:
    metadata:
      labels:
        app: django-messaging
    spec:
      containers:
      - name: django-app
        image: messaging-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
  labels:
    app: django-messaging
spec:
  type: ClusterIP
  selector:
    app: django-messaging
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
